--- a/src/app/components/header/nav-base/nav-base.component.html
+++ b/src/app/components/header/nav-base/nav-base.component.html
@@ -13,12 +13,12 @@
         </li>
         <li class="animation_nav">
             <a href="" class="">
-                Peliculas
+                Instrumentos
             </a>
         </li>
         <li class="animation_nav">
             <a href="" class="" >
-                Series
+                Accesorios y Repuestos
             </a>
         </li>
         <!-- <li><a href="indexNoticias.html" class="animation_nav">Noticias</a></li> -->
