refactor(app.component): estructura de nav incrustada a page home y fondo global en app.component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<app-header-base></app-header-base>
-<!-- <img src="" alt="" srcset="assets/9_yutyty_1231.jpg"> -->
+<router-outlet></router-outlet>
 <div class="background-image">
     <router-outlet></router-outlet>
 </div>
