--- a/src/app/components/header/nav-base/nav-base.component.html
+++ b/src/app/components/header/nav-base/nav-base.component.html
@@ -7,7 +7,7 @@
 <nav class="navBar" id="corrige_padding">
     <ul>
         <li class="animation_nav">
-            <a href="">
+            <a href="" routerLink="/home">
                 Home
             </a>
         </li>
