--- a/src/app/components/header/nav-base/nav-base.component.html
+++ b/src/app/components/header/nav-base/nav-base.component.html
@@ -6,13 +6,13 @@
 
 <nav class="navBar" id="corrige_padding">
     <ul>
-        <li class="animation_nav">
-            <a href="" routerLink="/home">
+        <li class="animation_nav" >
+            <a href="" routerLink="/" routerLinkActive="actived" [routerLinkActiveOptions]="{exact:true}">
                 Home
             </a>
         </li>
         <li class="animation_nav">
-            <a href="" class="">
+            <a href="" routerLink="/instruments" routerLinkActive="actived" [routerLinkActiveOptions]="{exact:true}">
                 Instrumentos
             </a>
         </li>
