--- a/src/app/components/header/header-base/header-base.component.css
+++ b/src/app/components/header/header-base/header-base.component.css
@@ -2,8 +2,8 @@ header {
     /* background-color: #f1f6e1; */
     height: auto;
     width: 100%;
-    justify-content: space-between;
-    position:fixed;
+    justify-content: safe;
+    position: fixed;
     display: flex;
     top: 0;
     left: 0;
@@ -16,7 +16,20 @@ header {
     height: 140px;
     width: auto;
 } */
-img{
+img {
     height: 90px;
     width: auto;
+    margin-left: 15px;
+}
+
+@media (max-width: 779px) {
+    header {
+        justify-content: space-between;
+    }
+    img{
+        margin-right: 15px;
+        /* PONE EN ORDEN LA IMAGEN PARA QUE QUEDE COMO 2DO ELEMENTO DESPUES */
+        order: 2;
+    }
+
 }
