--- a/src/app/components/header/nav-base/nav-base.component.css
+++ b/src/app/components/header/nav-base/nav-base.component.css
@@ -17,7 +17,9 @@
     /* margin-top: 12.5px; */
         /* margin-top: 12.5px; */
     margin-top: 10px;
-    margin-right: 20px;
+    /* margin-right: 20px; */
+    margin-left: 100px;
+
     grid-area: nav;
     text-transform: uppercase;
 }
@@ -74,6 +76,13 @@
     bottom: 0;
     top: 62px;
     left: 0;
-    box-shadow: inset 0 -3.1px 0 0 rgb(39, 209, 201);
+    /* box-shadow: inset 0 -3.1px 0 0 rgb(39, 209, 201); */
+    box-shadow: inset 0 -3.1px 0 0 white;
+
     width: 100%;
+}
+@media (max-width: 779px) {
+    .navBar{
+    display: none;    }
+
 }
