refactor(instrument.component,index,header.html): cambios de apariencia en esos componentes

--- a/src/app/components/header/header-base/header-base.component.css
+++ b/src/app/components/header/header-base/header-base.component.css
@@ -3,7 +3,7 @@ header {
     height: auto;
     width: 100%;
     justify-content: safe;
-    position: fixed;
+    /* position: fixed; */
     display: flex;
     top: 0;
     left: 0;
