--- a/src/app/pages/instrumentos/instrumentos.component.html
+++ b/src/app/pages/instrumentos/instrumentos.component.html
@@ -1,34 +1,20 @@
 <app-header-base></app-header-base>
 <div class="items">
-    <mat-card class="example-card">
-        <mat-card-header>
-            <div mat-card-avatar class="example-header-image"></div>
-            <mat-card-title>Korg X5D</mat-card-title>
-            <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-        </mat-card-header>
-   
-        <mat-card-content class="img-item">
-            <img mat-card-image src="https://files.soniccdn.com/images/products/original/218/korg-x5d-23218.jpg" alt="Photo of a Shiba Inu"/>
-        </mat-card-content>
-        <mat-card-actions>
-            <button mat-button>LIKE</button>
-            <button mat-button>SHARE</button>
-        </mat-card-actions>
-    </mat-card>
-    <mat-card class="example-card">
-        <mat-card-header>
-            <div mat-card-avatar class="example-header-image"></div>
-            <mat-card-title>Roland D50</mat-card-title>
-            <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-        </mat-card-header>
-
-        <mat-card-content class="img-item">
-            <img mat-card-image src="https://static.roland.com/assets/images/products/gallery/rc_d-50_gal.jpg?_ga=2.175881890.1631167708.1693943851-1259623013.1693943851" alt="Photo of a Shiba Inu"/>
-        </mat-card-content>
-        <mat-card-actions>
-            <button mat-button>LIKE</button>
-            <button mat-button>SHARE</button>
-        </mat-card-actions>
-    </mat-card>
-    <!-- <img mat-card-image src="https://static.roland.com/assets/images/products/gallery/rc_d-50_gal.jpg?_ga=2.175881890.1631167708.1693943851-1259623013.1693943851" alt="Photo of a Shiba Inu"/> -->
+    <div *ngFor="let ins of musicalInsList">
+        <mat-card class="example-card">
+            <mat-card-header>
+                <div mat-card-avatar class="example-header-image"></div>
+                <mat-card-title>{{ins.name}}</mat-card-title>
+                <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+            </mat-card-header>
+       
+            <mat-card-content class="img-item">
+                <img mat-card-image src="{{ins.imageSRC}}" alt="Photo of a Shiba Inu"/>
+            </mat-card-content>
+            <mat-card-actions>
+                <button mat-button>LIKE</button>
+                <button mat-button>SHARE</button>
+            </mat-card-actions>
+        </mat-card>
+    </div>
 </div>
