--- a/src/app/pages/instrumentos/instrumentos.component.css
+++ b/src/app/pages/instrumentos/instrumentos.component.css
@@ -1,32 +1,39 @@
-.items{
-    /* margin-top: 100px;
+.items {
+  /* margin-top: 100px;
     margin-left: 100px; */
-    margin:100px;
-    display: grid;
-    column-gap: 30px;
-    grid-template-columns: repeat(4,1fr);
+  margin: 100px;
+  display: grid;
+  column-gap: 30px;
+  grid-template-columns: repeat(4, 1fr);
 }
-.example-card {
-    width: 400px;
-    height: 400px;
 
-  }
-  
-  .example-header-image {
-    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-    background-size: cover;
-  }
-  /* mat-card img{
+.example-card {
+  width: 400px;
+  height: 400px;
+
+}
+
+.example-header-image {
+  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+  background-size: cover;
+}
+
+/* mat-card img{
    padding: 30px; 
   } */
-  .img-item{
-    width: 100%;
-    height: 400px;
-    display: grid;
+.img-item {
+  width: 100%;
+  height: 400px;
+  display: grid;
 
-  }
-  .img-item img{
-    object-fit: cover; /*this makes the image in src fit to the size specified below*/
-    width: 92%;
-    align-self: center;
-    }
+}
+.img-item a{
+  align-self: center;
+
+}
+
+.img-item a> img {
+  object-fit: cover;
+  /*this makes the image in src fit to the size specified below*/
+  width: 92%;
+}
