--- a/src/app/pages/instrumentos/instrumentos.component.html
+++ b/src/app/pages/instrumentos/instrumentos.component.html
@@ -7,9 +7,11 @@
                 <mat-card-title>{{ins.name}}</mat-card-title>
                 <mat-card-subtitle>Dog Breed</mat-card-subtitle>
             </mat-card-header>
-       
+
             <mat-card-content class="img-item">
-                <img mat-card-image src="{{ins.imageSRC}}" alt="Photo of a Shiba Inu"/>
+                <a href="">
+                    <img mat-card-image src="{{ins.imageSRC}}" alt="Photo of a Shiba Inu" />
+                </a>
             </mat-card-content>
             <mat-card-actions>
                 <button mat-button>LIKE</button>
