feat(instrument-mw.component) model-viewer implementado

--- a/src/app/pages/instrument-detail/instrument-detail.component.html
+++ b/src/app/pages/instrument-detail/instrument-detail.component.html
@@ -1,3 +1,4 @@
 <app-header-base></app-header-base>
 
 <p>instrument works!</p>
+<canvas #canvas id="canvas" style="height: 80vh;width: 80vw;"></canvas>
