--- a/src/app/pages/instrumentos/instrumentos.component.html
+++ b/src/app/pages/instrumentos/instrumentos.component.html
@@ -9,8 +9,8 @@
             </mat-card-header>
 
             <mat-card-content class="img-item">
-                <a href="">
-                    <img mat-card-image src="{{ins.imageSRC}}" alt="Photo of a Shiba Inu" />
+                <a [routerLink]="['/instrumentmv',ins.name]" href="">
+                    <img mat-card-image src="{{ins.image}}" alt="Photo of a Shiba Inu" />
                 </a>
             </mat-card-content>
             <mat-card-actions>
