refactor(app-routing...ts):cambio de ruta de detalle instrumento, style(instrumentos.component): cambio de margen en items

--- a/src/app/pages/instrumentos/instrumentos.component.html
+++ b/src/app/pages/instrumentos/instrumentos.component.html
@@ -9,7 +9,7 @@
             </mat-card-header>
 
             <mat-card-content class="img-item">
-                <a [routerLink]="['/instrumentmv',ins.name]" href="">
+                <a [routerLink]="['/instruments',ins.name]" href="">
                     <img mat-card-image src="{{ins.image}}" alt="Photo of a Shiba Inu" />
                 </a>
             </mat-card-content>
