--- a/src/app/pages/instrumentos/instrumentos.component.css
+++ b/src/app/pages/instrumentos/instrumentos.component.css
@@ -1,11 +1,14 @@
 .items {
   /* margin-top: 100px;
     margin-left: 100px; */
-  margin: 100px;
+  margin: 70px;
   display: grid;
-  column-gap: 30px;
+  /* column-gap: 31px; */
   row-gap: 30px;
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
 }
 
 .example-card {
