--- a/src/app/pages/instrument-mv/instrument-mv.component.html
+++ b/src/app/pages/instrument-mv/instrument-mv.component.html
@@ -33,30 +33,29 @@
 </article> -->
 
 <article>
-  <model-viewer
-    *ngIf="instrument.glbModel != ''; else image"
-    #mViewer camera-controls
-    camera-orbit="0deg 24deg 0m" src="{{ urlFile }}"
-    alt="A 3D model of an astronaut"
-    data-js-focus-visible="" ar-status="not-presenting">
+  <model-viewer *ngIf="instrument.glbModel != ''; else image" #mViewer camera-controls camera-orbit="0deg 24deg 0m"
+    src="{{ urlFile }}" alt="A 3D model of an astronaut" data-js-focus-visible="" ar-status="not-presenting">
   </model-viewer>
 
   <ng-template #image>
     <section class="img-detail" #imgDetail>
-      <img mat-card-image src="{{ instrument.image }}" alt="Photo of a Shiba Inu"/>
+      <img mat-card-image src="{{ instrument.image }}" alt="Photo of a Shiba Inu" />
     </section>
   </ng-template>
-  
+
   <section class="data-inst" [style.margin-top]="marginTop">
     <h1>{{ instrument.name }}</h1>
     <p class="mb-4">{{ instrument.description }}</p>
     <h3 class="usedBy">Usado por:</h3>
-    <mat-chip-listbox class="example-chip"cdkDropList
-      cdkDropListOrientation="horizontal">
-      <mat-chip-option *ngFor="let art of instrument.artist"
-        class="example-box" cdkDrag selected color="primary">
+    <mat-chip-listbox class="example-chip" cdkDropList cdkDropListOrientation="horizontal">
+      <mat-chip-option *ngFor="let art of instrument.artist" class="example-box" cdkDrag selected color="primary">
         {{ art }}
       </mat-chip-option>
     </mat-chip-listbox>
+    <h3 class="demo">Demo:</h3>
+    <!-- En el template de tu componente Angular -->
+    <audio controls="" autoplay="" name="media"  *ngIf="instrument.demo">
+       <source [src]="instrument.demo" type="audio/mpeg">
+    </audio>
   </section>
 </article>
