--- a/src/app/pages/instrumentos/instrumentos.component.css
+++ b/src/app/pages/instrumentos/instrumentos.component.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Poppins:wght@300&family=Roboto:wght@400;700&display=swap');
+
 .items {
   /* margin-top: 100px;
     margin-left: 100px; */
@@ -12,8 +14,12 @@
 }
 
 .example-card {
+  box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;   
   width: 400px;
   height: 400px;
+  background-color: rgb(255, 255, 255,0.2); /* Ajusta el último valor (0.08) para cambiar la opacidad */
+
+  /* background-color: transparent; */
 
 }
 
@@ -21,7 +27,13 @@
   background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
   background-size: cover;
 }
+.card-text-color{
+  color: white;
+  font-weight: 300;
+  font-size: 20px;
+  font-family: 'Poppins', sans-serif;
 
+}
 /* mat-card img{
    padding: 30px; 
   } */
