--- a/src/app/pages/instrumentos/instrumentos.component.html
+++ b/src/app/pages/instrumentos/instrumentos.component.html
@@ -3,9 +3,9 @@
     <div *ngFor="let ins of musicalInsList">
         <mat-card class="example-card">
             <mat-card-header>
-                <div mat-card-avatar class="example-header-image"></div>
-                <mat-card-title>{{ins.name}}</mat-card-title>
-                <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+                <!-- <div mat-card-avatar class="example-header-image"></div> -->
+                <mat-card-title class="card-text-color">{{ins.name}}</mat-card-title>
+                <!-- <mat-card-subtitle>Dog Breed</mat-card-subtitle> -->
             </mat-card-header>
 
             <mat-card-content class="img-item">
@@ -13,10 +13,10 @@
                     <img mat-card-image src="{{ins.image}}" alt="Photo of a Shiba Inu" />
                 </a>
             </mat-card-content>
-            <mat-card-actions>
+            <!-- <mat-card-actions>
                 <button mat-button>LIKE</button>
                 <button mat-button>SHARE</button>
-            </mat-card-actions>
+            </mat-card-actions> -->
         </mat-card>
     </div>
 </div>
