style(instrument-mv.component):al tag de audio se le ajusta el nivel de volumen por defecto

--- a/src/app/pages/instrument-mv/instrument-mv.component.html
+++ b/src/app/pages/instrument-mv/instrument-mv.component.html
@@ -54,7 +54,7 @@
     </mat-chip-listbox>
     <h3 class="demo">Demo:</h3>
     <!-- En el template de tu componente Angular -->
-    <audio controls="" autoplay="" name="media"  *ngIf="instrument.demo">
+    <audio controls="" autoplay="" name="media"  *ngIf="instrument.demo" #audioConfig>
        <source [src]="instrument.demo" type="audio/mpeg">
     </audio>
   </section>
