--- a/src/app/pages/instrument-mv/instrument-mv.component.html
+++ b/src/app/pages/instrument-mv/instrument-mv.component.html
@@ -54,8 +54,15 @@
     </mat-chip-listbox>
     <h3 class="demo">Demo:</h3>
     <!-- En el template de tu componente Angular -->
-    <audio controls="" autoplay="" name="media"  *ngIf="instrument.demo" #audioConfig>
+    <audio controls="" autoplay="" name="media"  *ngIf="instrument.demo;else notAudio"   #audioConfig>
        <source [src]="instrument.demo" type="audio/mpeg">
     </audio>
+    <ng-template #notAudio>
+      <h5 class="notAudioText">Audio No Disponible</h5>
+    </ng-template>
+
+    <!-- <iframe width="420" height="315"
+      src="https://www.youtube.com/embed/WiYa4oUxKR8?autoplay=1&mute=1">
+    </iframe> -->
   </section>
 </article>
