--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,6 @@
 <app-header-base></app-header-base>
+
+<div class="home-container">
+    <h1>TunePedia</h1>
+    <p>Explora, Aprende, Sintoniza: TunePedia, Tu Fuente Definitiva para Todo lo Relacionado con Instrumentos Musicales.</p>
+</div>
