--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,7 +1,7 @@
 .home-container {
     box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;    
     position: relative;
-
+    margin-top: 50px;
   /* margin-top: 100px;
     margin-left: 100px; */
     /* margin: 70px; */
@@ -9,8 +9,8 @@
     /* column-gap: 31px; */
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
-    height: 800px;
+    width: 40%;
+    height: 80%;
     /* border: 1px solid black; */
     padding: 40px; /* Ajusta este valor según sea necesario */
 
@@ -32,4 +32,53 @@
     font-size: 1.5rem;
     line-height: 2rem;
 
+}
+.example-card {
+    margin-left: auto;
+    margin-right: auto;
+
+  }
+  
+  .example-header-image {
+    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+    background-size: cover;
+  }
+
+.servicios{
+    /* margin-top: 100px;
+      margin-left: 100px; */
+      margin-top: 70px;
+        
+      display: grid;
+      /* column-gap: 31px; */
+      row-gap: 40px;
+      column-gap: 60px;
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+      margin-left: auto;
+      margin-right: auto;
+      width: 100%;
+}
+
+.card-text-font{
+    font-family: 'Poppins', sans-serif;
+}
+
+@media (max-width: 949px) 
+  {
+    .home-container {
+      width: 70%;
+  }
+
+
+        
+}
+
+@media (max-width: 500px) {
+    .home-container {
+      width: 70%;
+      height: 90%;
+  }
+  .servicios{
+    grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
+  }
 }
