--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,35 @@
 <app-header-base></app-header-base>
 
 <div class="home-container">
-    <h1>TunePedia</h1>
-    <p>Explora, Aprende, Sintoniza: TunePedia, Tu Fuente Definitiva para Todo lo Relacionado con Instrumentos Musicales.</p>
+  <h1>TunePedia</h1>
+  <p>
+    Explora, Aprende, Sintoniza: TunePedia, Tu Fuente Definitiva para Todo lo
+    Relacionado con Instrumentos Musicales.
+  </p>
+<div class="servicios">
+    <mat-card class="example-card">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title class="card-text-font">Instrumentos</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <p class="card-text-font">
+           Descubre una variedad de instrumentos musicales de calidad.
+          </p>
+        </mat-card-content>
+      </mat-card>
+    
+       <mat-card class="example-card">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title class="card-text-font">Accesorios</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <p class="card-text-font">
+           Encuentra los accesorios que necesitas para tu instrumento musical.
+          </p>
+        </mat-card-content>
+  
+      </mat-card>
+</div>
 </div>
