--- a/src/app/components/header/nav-base/nav-base.component.css
+++ b/src/app/components/header/nav-base/nav-base.component.css
@@ -83,6 +83,69 @@
 }
 @media (max-width: 910px) {
     .navBar{
-    display: none;    }
+        /* display: none; */
+    background: rgba(117, 109, 109, 0.1);
+    padding: 20px;
+    width: 88%;
+    /* margin-top: 10px; */
+    /* top:100px; */
+    margin-right: auto;
+    margin-left: auto;
+        z-index: 100;
+    }
+
+    .navBar ul {
+        /* list-style: none;
+        margin: 0;
+        padding: 0; */
+        display: flex;
+        flex-direction: column;
+        row-gap: 1.5rem;
+    }
+    
+    .navBar ul li {
+        display: inline-block;
+        list-style-type: none;
+    }
+    
+    .navBar ul li a {
+        padding: var(--padding_bug);
+        color: white;
+        text-decoration: none;
+        font-family: var(--principal_font);
+    }
+    .animation_nav::before {
+        content: " ";
+        position: absolute;
+        /* width: 0; */
+        height: 0;
+        /* bottom: 0; */
+        top: 0;
+        /* left: 0; */
+        transition: none;
+        box-shadow: none;
+        
+    }
+    .animation_nav:hover::before{
+        width: 100%;
+    }
+
+    .actived{
+        position: relative;
+        /* box-shadow: inset 0 -3.1px 0 0 var(--main-color); */
+    }
+    
+    .actived::before {
+        content: " ";
+        position: absolute;
+        height: 0;
+        bottom: none;
+        top: none;
+        left: none;
+        /* box-shadow: inset 0 -3.1px 0 0 rgb(39, 209, 201); */
+        box-shadow: none;
+    
+        width: 100%;
+    }
 
 }
