--- a/src/app/components/header/nav-base/nav-base.component.css
+++ b/src/app/components/header/nav-base/nav-base.component.css
@@ -82,7 +82,7 @@
 }
 @media (max-width: 910px) {
   .navBar {
-    /* display: none; */
+    display: none;
     /* background: rgba(117, 109, 109, 0.1); */
     box-shadow: rgba(255, 255, 255, 0.2) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.35) 0px 50px 100px -20px, rgba(0, 0, 0, 0.4) 0px 30px 60px -30px;    
 
