style(header-base.component,nav-btn.component):Se implementa funcionalidad de ocultar/mostrar nav responsivo al hacer click en button nav

--- a/src/app/components/buttons/nav-btn/nav-btn.component.html
+++ b/src/app/components/buttons/nav-btn/nav-btn.component.html
@@ -1,4 +1,4 @@
-<button class="btn">
+<button class="btn" (click)="testBtn()" [(ngModel)]="isClicked">
     <span class="icon">
         <a>
             <svg viewBox="0 0 175 80" width="40" height="40">
