--- a/src/app/components/header/header-base/header-base.component.html
+++ b/src/app/components/header/header-base/header-base.component.html
@@ -1,8 +1,8 @@
 <header>
     <!-- <img src="" alt="" srcset="assets/TunePedia3D-transparent-logo.png"> -->
     <img src="" alt="" srcset="assets/2-transparent.png"> 
-    <app-nav-btn></app-nav-btn>
-    <app-nav-base></app-nav-base>
+    <app-nav-btn [isClicked]="isNavVisible" (eventNavVisible)="isNavVisible = $event"></app-nav-btn>
+    <app-nav-base [hidden]="!isNavVisible"></app-nav-base>
    
     <!-- <p>header works!</p> -->
 </header>
