--- a/src/app/components/header/nav-base/nav-base.component.css
+++ b/src/app/components/header/nav-base/nav-base.component.css
@@ -58,7 +58,7 @@
   top: 50px;
   left: 0;
   transition: all 0.5s;
-  box-shadow: inset 0 -3.1px 0 0 var(--second-color);
+  box-shadow: inset 0 -3.1px 0 0 var(--light-color);
 }
 .animation_nav:hover::before {
   width: 100%;
