--- a/src/app/pages/instrumentos/instrumentos.component.css
+++ b/src/app/pages/instrumentos/instrumentos.component.css
@@ -11,6 +11,7 @@
   margin-left: auto;
   margin-right: auto;
   width: 70%;
+  justify-items: center;
 }
 
 .example-card {
@@ -55,6 +56,11 @@
 }
 
 @media (max-width: 500px) {
+  .items {
+    grid-template-columns: repeat(auto-fill, minmax(284px, 1fr));
+    width: 100%;
+  
+  }
   .example-card {
     width: 100%;
     max-width: 284px;
