--- a/src/app/components/header/nav-base/nav-base.component.css
+++ b/src/app/components/header/nav-base/nav-base.component.css
@@ -101,7 +101,7 @@
         padding: 0; */
     display: flex;
     flex-direction: column;
-    row-gap: 1.5rem;
+    row-gap: 1rem;
   }
 
   .navBar ul li {
@@ -115,6 +115,7 @@
       color: white;
       text-decoration: none;
       font-family: var(--principal_font);
+      font-size: 1.25em;
     }
     .navBar ul li a:hover {
       color:#1d6a78 ;  
